--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.0
 
+  animations: ^1.1.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
