Implement connectivity status service

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,12 +14,16 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.0
 
+  provider: ^4.3.2+2
+
   # I18N Dependencies
   flutter_localizations:
     sdk: flutter
   intl: ^0.16.1
 
   animations: ^1.1.2
+
+  connectivity: ^2.0.2
 
 dev_dependencies:
   flutter_test:
