--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.0
+  responsive_framework: ^0.0.14
 
   # I18N Dependencies
   flutter_localizations:
@@ -26,6 +27,9 @@ dev_dependencies:
   import_sorter: ^4.4.1
 
   flutter_launcher_icons: ^0.8.1
+
+import_sorter:
+  comments: false
 
 flutter_icons:
   ios: true
